--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>SpeedFlipper</title>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
   <script src="sketch.js"></script>
+  <script src="windowStates.js"></script>
   <style>body{padding:0; margin:0;background:blue;}</style>
 </head>
 <body>
