--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
   <script src="sketch.js"></script>
   <script src="windowStates.js"></script>
-  <style>body{padding:0; margin:0;background:black;}</style>
+  <style>
+  html, body {
+    padding: 0; 
+    margin: 0;
+    height: 100%;
+    overflow: hidden;
+    background: black;
+  }
+  </style>
 </head>
 <body>
 
