--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <script src="https://cdn.jsdelivr.net/npm/p5@1.0.0/lib/p5.js"></script>
   <script src="sketch.js"></script>
   <script src="windowStates.js"></script>
+  <script src="rain.js"></script>
   <style>
   html, body {
     padding: 0; 
