lightning prototype (might change)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <script src="sketch.js"></script>
   <script src="windowStates.js"></script>
   <script src="rain.js"></script>
+  <script src="lightning.js"></script>
   <style>
   html, body {
     padding: 0; 
