replaced settings button with settings icon

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <script src="windowStates.js"></script>
   <script src="rain.js"></script>
   <script src="lightning.js"></script>
+  <script src="button.js"></script>
   <style>
   html, body {
     padding: 0; 
